<resources>
    <string name="app_name">Word Cloud</string>
    <string name="action_settings">Settings</string>
    <string name="generate">GENERATE!</string>
    <string name="appearanceRate">Percentage of the appearnce</string>
    <string name="inputTitle">Place your text input below:</string>
    <string name="buzzWord">The most common word</string>
    <string name="uniqueWords">Number of distinct words</string>
    <string name="totalWord">Total word count</string>
    <string name="openFileButton">OPEN FILE</string>
    <string name="clearInput">Clear Input</string>
    <string name="stringHistory">History</string>
    <string name="percentage">PERCENTAGE!</string>
    <string name="total_counts">TOTAL COUNTS!</string>
    <string name="distinct_word">DISTINCT WORD!</string>
    <string name="common_word">COMMON WORD!</string>
</resources>
